--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "axios": "^0.17.1",
+    "amazon-cognito-identity-js": "^2.0.6",
+    "aws-sdk": "^2.188.0",
+    "axios": "^0.18.0",
     "vue": "^2.5.11"
   },
   "browserslist": [
@@ -27,10 +29,10 @@
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
     "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
-    "vue-loader": "^13.0.5",
+    "sass-loader": "^7.0.1",
+    "vue-loader": "^15.1.0",
     "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "webpack": "^4.8.3",
+    "webpack-dev-server": "^3.1.4"
   }
 }
